--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>WATS3010 Basic CSS Assignment</title>
-    <meta name="description" content="WATS3010 Basic CSS Assignment.">
+    <title>Basic CSS</title>
+    <meta name="description" content="CSS Assignment.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- TODO: Add stylesheet link to head of document -->
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <header class="page-header">
         <h1>Kubla Khan <small>(1816)</small></h1>
